2013-07-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.36 released.

        * Tweaked formatting of documentation.


2013-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.35 released.

        * Minor fix for back and forward navigation.

        * Tweaked formatting of documentation.


2013-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.34 released.

        * Minor fix for Anonymous Subroutines.


2013-07-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.33 released.

        * Menus with FullAuto can now dynamically authenticate.
          This enables some items to be authenticated, and
          others not.
          

2013-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.32 released.

        * More work on result block. Fixed when in use
          with FullAuto.


2013-06-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.31 released.

        * Documentation updated.


2013-06-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.30 released.

        * More work on result block. Documentation updated
          to illustrate use of Anonymous Subroutines with
          result items.


2013-06-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.29 released.

        * More work on result block. Documentation updated
          to illustrate use of Anonymous Subroutines with
          result items.


2013-06-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.28 released.

        * More work on result block. Documentation updated
          to illustrate use of closures with result items.


2013-06-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 2.27 released.

        * Fixed all items for tickets 84173 and 72041.
          Result block now works correctly for predefined