@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 05b47ad2f403e9465fa9d253c176b6e07917af99 ChangeLog
+SHA1 a47979d66be86e9a1bf2255cf2e677a428a40659 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 ac2ddd7af870cc6eb94ac21a890534f38fd6f8fc META.yml
+SHA1 5e07013c2410e3256eec514cf315a49b2cfbeae7 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 8b673061939e72411e4b717b9fd77b4954e33d70 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,17 +31,17 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 c1b74e43a1de8775dc761a171d950270e6aaf0db lib/Term/Menus.pm
+SHA1 0c27e4493b35ba9a5868dcbe223afc4a76357072 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJR7cDAAAoJEBa/9Pad787EWuEIAKj3t4Q9JfgqLOWFuU3LoqrH
-vTbrxyto22jL4l456jhccMwrW1+wLnoPXvGJQ1dUhzDw7OT77pmaznc3e4gLDUly
-nGd5SSSR2lgMQje6gDsh4tE4i43BSLDpeQAi8P8+u5feGqhsALrUQYI+ZRpa74UJ
-R+V7pEdC8an0Vkx6oSkU9tdJ76YUCuocnv907dzzX8mfcDryf5XuEd4vWT1m4AVK
-Obn2z/TPTiSPqeLMPkkh/1gtUpOb57MhTQNOMXNk23Z5f0GIOJvNBUQE7qD1pqOX
-zmfRKXVcePvbonuVwCClQznNHvOx2i9CCJUJRbNrxwupP1FsylfI4VnBwInz+Ls=
-=H5T+
+iQEcBAEBAgAGBQJR9JBlAAoJEBa/9Pad787EwIEH/RCEa/TvgMfkYfPDbRFcF8K8
+xNon2keLUzPbwzBqu309/SRg6i0z+n+eJt5FsjgTKEBaRf007hZDqSKaoENshxTP
+EIUwhs7atdoxWYJty0tGocceYNe5q3QYPQZENW5d8Xz83GEfqMGxXlMNXX4T3/ax
+efNKQmWdmVmMixkK4doEAJGD2RPJf7xBLWcrnp40k7G0Yppq2XOfs7xsN6+P0w6K
+9yPoLE+oeR7L3W6T9pXpqDgIpKPQYCff0YWhf5nRZbE1zfafHipb+sVcwlm2jUae
+SafCA81z5ntlj1QWoVkymPQo55a7ackqWshFjr18si2BCCir5DZ+B7MY+yOCCmc=
+=tDcY
 -----END PGP SIGNATURE-----
